--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="banner">
-      <span> NLCMS Feedback System</span>
-    </div>
-    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark banner">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">NLCMS Feedback System</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
