added wms and marker control

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <form class="f12" id="feedbackForm" method="get">
           <div class="form-group">
             <label for="comments"><b>Your comments on selected point for selected year*</b></label>
-            <textarea class="form-control f12" id="comments" rows="3" required>asdasd</textarea>
+            <textarea class="form-control f12" id="comments" rows="3" required></textarea>
           </div>
           <div class="form-group">
             <label for="suggestedClass"><b>What should the land cover be instead?*</b></label>
             <select id="suggestedClass" class="form-control f12" placeholder="Select a land cover" required>
-              <option value="" disabled >Select a land cover</option>
-              <option value="barerock" selected>Bare rock</option>
+              <option value="" disabled selected>Select a land cover</option>
+              <option value="barerock">Bare rock</option>
               <option value="baresoil">Bare soil</option>
               <option value="cropland">Cropland</option>
               <option value="forest">Forest</option>
@@ -52,8 +52,8 @@
           <div class="form-group">
             <label for="source"><b>What is the source of your information?*</b></label>
             <select id="source" class="form-control f12" placeholder="Select a land cover" required>
-              <option value="" disabled >Select the source of your knowledge</option>
-              <option value="local" selected>Local knowledge</option>
+              <option value="" disabled selected>Select the source of your knowledge</option>
+              <option value="local">Local knowledge</option>
               <option value="photos">Personal photos</option>
               <option value="thirdparty">Third Party (friend, etc.)</option>
               <option value="image">Visual Interpretation on satellite imagery</option>
@@ -72,6 +72,15 @@
         </form>
       </div>
     </div>
+    <div class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <p>Message.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -82,5 +91,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha256-KM512VNnjElC30ehFwehXjx1YCHPiQkOPmqnrWtpccM=" crossorigin="anonymous"></script>
 
     <script src="main.js"></script>
+    <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div> -->
   </body>
 </html>
