--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <small id="emailHelp" class="form-text text-muted">We'll never share your name and email with anyone else.</small>
           </div>
           <button type="submit" class="btn btn-success f12">Submit</button>
+          <div class="form-group">
+            <small> <b>Disclaimer</b> The district layer is shared only to assist the feedback process and is not supposed accurately
+              represent the administrative boundaries.</small>
+          </div>
         </form>
       </div>
     </div>
